Revert "Fixed an issue where the close button on the modals was not positioned correctly on Safari and iOS."
This reverts commit c507890e3cb774b19cd0e5df40de0477d62c60e3.

--- a/theme/common.less
+++ b/theme/common.less
@@ -417,16 +417,13 @@ div.simframe > iframe {
 *******************************/
 
 .ui.modal .closeIcon {
-    position: relative;
+    position: absolute;
     top: 0; 
     right: 0;
-    z-index: 1002;
 }
 .ui.modal.projectsdialog .closeIcon {
-    position: absolute;
-    color: white;
-    padding: 1.75rem;
-    margin-right: 0px;
+    top: 0.4rem;
+    right: 0.2rem;
 }
 
 .ui.button.icon.clear {
